--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <div class="p-5">
                   <h2 class="mb-5">Hi! I'm Aqil Zikry</h2>
                   <p>I guess I do website and designs and stuff.. ^_^</p>
-                  <p><a href="PDFResume\Resume-MAqilZikryBMNizam.pdf" target="_blank">Checkout my resume</a></p>
+                  <p><a href="" target="_blank">Checkout my resume</a></p>
                   <p><a href="PDFResume\AqilTemplateExperiences.pdf" target="_blank">A Cooler View Of My Workstuffs!</a></p>
                   <ul class="ftco-footer-social list-unstyled mt-4">
                   </ul>
