--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
                 <div class="p-5">
                   <h2 class="mb-5">Hi! I'm Aqil Zikry</h2>
                   <p>I guess I do website and designs and stuff.. ^_^</p>
-                  <p><a href="" target="_blank">Checkout my resume</a></p>
-                  <p><a href="PDFResume\AqilTemplateExperiences.pdf" target="_blank">A Cooler View Of My Workstuffs!</a></p>
+                  <p><a href="#" target="_blank">Checkout my resume</a></p>
+                  <p><a href="#" target="_blank">A Cooler View Of My Workstuffs!</a></p>
                   <ul class="ftco-footer-social list-unstyled mt-4">
                   </ul>
                   <h5>Contact me here!</h5>
@@ -172,7 +172,7 @@
           </div>
           <div class="row no-gutters">
           <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-            <a href="https://my.mpl.mobilelegends.com/" target="_blank" class="image d-flex justify-content-center align-items-center" style="background-image: url('images/Portfolio1.png'); " data-scrollax=" properties: { translateY: '-30%'}">
+            <a href="https://my.mpl.mobilelegends.com/" target="_blank" class="image d-flex justify-content-center align-items-center" style="background-image: url('images/cr3on-mpl.png'); " data-scrollax=" properties: { translateY: '-30%'}">
               <div class="icon d-flex text-center justify-content-center align-items-center">
                 <span class="icon-search"></span>
               </div>
@@ -183,13 +183,13 @@
               <p><ul><li>Was tasked to insert and design team schedules</li>
                 <li>Used google sheets online to link with the website about the players statistics and schedule</li>
                 <li>Home page touch-ups and ideas</li>
-                <li>APPLICATION USED : GOOGLE EXCEL . ELEMENTOR . CSS . HTML  . WORDPRESS</li></ul>
+                <li>APPLICATION USED : GOOGLE EXCEL . ELEMENTOR . CSS  . WORDPRESS</li></ul>
                 </p>
               <p><a href="https://my.mpl.mobilelegends.com/" target="_blank">View Project</a></p>
             </div>
           </div>
           <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-            <a href="https://mmcgamudamrt.com.my/" target="_blank" class="image order-2 d-flex justify-content-center align-items-center" style="background-image: url('images/Portfolio2.png'); " data-scrollax=" properties: { translateY: '-30%'}">
+            <a href="https://mmcgamudamrt.com.my/" target="_blank" class="image order-2 d-flex justify-content-center align-items-center" style="background-image: url('images/cr3on-mmc.png'); " data-scrollax=" properties: { translateY: '-30%'}">
               <div class="icon d-flex text-center justify-content-center align-items-center">
                 <span class="icon-search"></span>
               </div>
@@ -200,12 +200,12 @@
               <p><ul><li>Responsible on updating progress pictures sent from client</li>
                 <li>Designed and made the progress picture page</li> 
                 <li>Update announcements and mobile view of the site</li>
-                <li>APPLICATION USED : ELEMENTOR . CSS . HTML  . WORDPRESS</li></ul></p>
+                <li>APPLICATION USED : ELEMENTOR . CSS  . WORDPRESS</li></ul></p>
               <p><a href="https://mmcgamudamrt.com.my/" target="_blank">View Project</a></p>
             </div>
           </div>
           <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-            <a href="https://mmtf.my/" target="_blank" class="image d-flex justify-content-center align-items-center" style="background-image: url('images/Portfolio3.png'); " data-scrollax=" properties: { translateY: '-30%'}">
+            <a href="https://mmtf.my/" target="_blank" class="image d-flex justify-content-center align-items-center" style="background-image: url('images/cr3on-mmtf.png'); " data-scrollax=" properties: { translateY: '-30%'}">
               <div class="icon d-flex text-center justify-content-center align-items-center">
                 <span class="icon-search"></span>
               </div>
@@ -216,13 +216,13 @@
               <p><ul><li>Redesigned the mobile view of the website to fit viewers preference</li>
                 <li>Resized using photoshop most of the pictures on the website to fit viewers preferences</li>
                 <li>Updated the info on the website according to the client needs</li>
-                <li>APPLICATION USED : ELEMENTOR . CSS . HTML  . WORDPRESS</li></ul>
+                <li>APPLICATION USED : ELEMENTOR . CSS   . WORDPRESS</li></ul>
                 </p>
               <p><a href="https://mmtf.my/" target="_blank">View Project</a></p>
             </div>
           </div>
           <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-            <a href="https://els.edu.my/" target="_blank" class="image order-2 d-flex justify-content-center align-items-center" style="background-image: url('images/Portfolio4.png'); " data-scrollax=" properties: { translateY: '-30%'}">
+            <a href="https://els.edu.my/" target="_blank" class="image order-2 d-flex justify-content-center align-items-center" style="background-image: url('images/cr3on-els.png'); " data-scrollax=" properties: { translateY: '-30%'}">
               <div class="icon d-flex text-center justify-content-center align-items-center">
                 <span class="icon-search"></span>
               </div>
@@ -233,14 +233,14 @@
               <p><ul><li>Fix a bug of code for price of courses that would effect price calculation</li> 
                 <li>Created ELS Ciep scholarships page</li> 
                 <li>Few alignments made for website pages</li>
-                <li>APPLICATION USED : JAVASCRIPT . ELEMENTOR . CSS . HTML  . WORDPRESS</li>
+                <li>APPLICATION USED : JAVASCRIPT . ELEMENTOR . CSS  . WORDPRESS</li>
               </ul>
                 </p>
               <p><a href="https://els.edu.my/" target="_blank">View Project</a></p>
             </div>
           </div>
           <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-            <a href="https://www.zibelinepub.com/"  target="_blank" class="image d-flex justify-content-center align-items-center" style="background-image: url('images/Portfolio5.png'); " data-scrollax=" properties: { translateY: '-30%'}">
+            <a href="https://www.zibelinepub.com/"  target="_blank" class="image d-flex justify-content-center align-items-center" style="background-image: url('images/zibeline-zibeline.png'); " data-scrollax=" properties: { translateY: '-30%'}">
               <div class="icon d-flex text-center justify-content-center align-items-center">
                 <span class="icon-search"></span>
               </div>
@@ -251,14 +251,14 @@
               <p><ul><li>Hugely modernized the main page of the company website</li>
                 <li>Made it as colourful according to the logo colour’s</li> 
                 <li>Designed and implemented the main page design</li>
-                <li>APPLICATION USED : JAVASCRIPT . ELEMENTOR . CSS . HTML  . WORDPRESS</li>
+                <li>APPLICATION USED : JAVASCRIPT . ELEMENTOR . CSS   . WORDPRESS</li>
               </ul>
                 </p>
               <p><a href="https://www.zibelinepub.com/" target="_blank">View Project</a></p>
             </div>
           </div>
           <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-            <a href="https://aedc.com.my/" target="_blank" class="image order-2 d-flex justify-content-center align-items-center" style="background-image: url('images/Portfolio6.png'); " data-scrollax=" properties: { translateY: '-30%'}">
+            <a href="https://aedc.com.my/" target="_blank" class="image order-2 d-flex justify-content-center align-items-center" style="background-image: url('images/zibeline-aedc.png'); " data-scrollax=" properties: { translateY: '-30%'}">
               <div class="icon d-flex text-center justify-content-center align-items-center">
                 <span class="icon-search"></span>
               </div>
@@ -269,13 +269,13 @@
               <p><ul><li>Also made the cover for the journal</li>
                 <li>One of the example journal website that was made by me</li> 
                 <li>Made a journal website design as requested by employer</li>
-                <li>APPLICATION USED : PHOTOSHOP . ELEMENTOR . CSS . HTML  . WORDPRESS</li></ul>
+                <li>APPLICATION USED : PHOTOSHOP . ELEMENTOR . CSS . WORDPRESS</li></ul>
                 </p>
               <p><a href="https://aedc.com.my/" target="_blank">View Project</a></p>
             </div>
           </div>
           <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-            <a href="https://dtenunklasik.com.my/" target="_blank" class="image d-flex justify-content-center align-items-center" style="background-image: url('images/Portfolio7.png'); " data-scrollax=" properties: { translateY: '-30%'}">
+            <a href="https://dtenunklasik.com.my/" target="_blank" class="image d-flex justify-content-center align-items-center" style="background-image: url('images/zibeline-tenun.png'); " data-scrollax=" properties: { translateY: '-30%'}">
               <div class="icon d-flex text-center justify-content-center align-items-center">
                 <span class="icon-search"></span>
               </div>
@@ -286,14 +286,16 @@
               <p><ul><li>Made graphics for the website using Adobe Photoshop/ Adobe Illustrator</li>
                 <li>Made adjustments to the product interface so that the description of the product is readable and easier for the customer</li> 
                 <li>Used WOO Commerce for the website e-commerce system</li>
-                <li>WOOCOMMERCE . PHOTOSHOP . CSS . HTML  . WORDPRESS</li>
+                <li>WOOCOMMERCE . PHOTOSHOP . CSS  . WORDPRESS</li>
               </ul>
                 </p>
               <p><a href="https://dtenunklasik.com.my/" target="_blank">View Project</a></p>
             </div>
           </div>
+
+
           <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-            <a href="https://zibelinesubmissions.com/" target="_blank" class="image order-2 d-flex justify-content-center align-items-center" style="background-image: url('images/Portfolio9.png'); " data-scrollax=" properties: { translateY: '-30%'}">
+            <a href="https://zibelinesubmissions.com/" target="_blank" class="image order-2 d-flex justify-content-center align-items-center" style="background-image: url('images/zibeline-submission.png'); " data-scrollax=" properties: { translateY: '-30%'}">
               <div class="icon d-flex text-center justify-content-center align-items-center">
                 <span class="icon-search"></span>
               </div>
@@ -301,16 +303,16 @@
             <div class="text order-1">
               <h4 class="subheading">Junior Web Dev - Zibeline International Publishing</h4>
               <h2 class="heading"><a href="https://zibelinesubmissions.com/" target="_blank">Zibeline Submission</a></h2>
-              <p><ul><li>Created a website from scratch for users that would be to upload their thesis into our journals</li>
+              <p><ul><li>Created the website from scratch for users that would be to upload their thesis into our journals</li>
                 <li> A form login system that requires user to login to upload files</li> 
                 <li>Made a journal website design as requested by employer</li>
-                <li>APPLICATION USED : CSS . HTML  . WORDPRESS .  ELEMENTOR </li></ul>
+                <li>APPLICATION USED : CSS  . WORDPRESS .  ELEMENTOR </li></ul>
                 </p>
               <p><a href="https://zibelinesubmissions.com/" target="_blank">View Project</a></p>
             </div>
           </div>
           <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-            <a href="https://openaccesshub.my/" target="_blank" class="image d-flex justify-content-center align-items-center" style="background-image: url('images/Portfolio8.png'); " data-scrollax=" properties: { translateY: '-30%'}">
+            <a href="https://openaccesshub.my/" target="_blank" class="image d-flex justify-content-center align-items-center" style="background-image: url('images/zibeline-openacceshub.png'); " data-scrollax=" properties: { translateY: '-30%'}">
               <div class="icon d-flex text-center justify-content-center align-items-center">
                 <span class="icon-search"></span>
               </div>
@@ -319,12 +321,94 @@
               <h4 class="subheading">Junior Web Dev - Zibeline International Publishing</h4>
               <h2 class="heading"><a href="https://openaccesshub.my/" target="_blank">Open Access Hub</a></h2>
               <p><ul><li>Made the website from scratch according to the example given by the employer</li>
-                <li>APPLICATION USED : WOOCOMMERCE . PHOTOSHOP . CSS . HTML  . WORDPRESS</li>
+                <li>APPLICATION USED : WOOCOMMERCE . PHOTOSHOP . CSS  . WORDPRESS</li>
               </ul>
                 </p>
               <p><a href="https://openaccesshub.my/" target="_blank">View Project</a></p>
             </div>
           </div>
+          <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
+            <a href="https://virtualofficemalaysia.my/" target="_blank" class="image order-2 d-flex justify-content-center align-items-center" style="background-image: url('images/ariyes-virtual-online.png'); " data-scrollax=" properties: { translateY: '-30%'}">
+              <div class="icon d-flex text-center justify-content-center align-items-center">
+                <span class="icon-search"></span>
+              </div>
+            </a>
+            <div class="text order-1">
+              <h4 class="subheading">Web Developer - Ariyes Online</h4>
+              <h2 class="heading"><a href="https://virtualofficemalaysia.my/" target="_blank">Virtual Office Malaysia</a></h2>
+              <p><ul><li>Revamped the whole website look into a more modern look and feel</li>
+                <li> A complete CRUD process where user can login etc..</li>
+                <li>APPLICATION USED : CSS . JAVASCRIPT . WORDPRESS .  ELEMENTOR </li></ul>
+                </p>
+              <p><a href="https://virtualofficemalaysia.my/" target="_blank">View Project</a></p>
+            </div>
+          </div>
+          <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
+            <a href="http://airadventureflying.com/" target="_blank" class="image d-flex justify-content-center align-items-center" style="background-image: url('images/ariyes-aafc.png'); " data-scrollax=" properties: { translateY: '-30%'}">
+              <div class="icon d-flex text-center justify-content-center align-items-center">
+                <span class="icon-search"></span>
+              </div>
+            </a>
+            <div class="text">
+              <h4 class="subheading">Web Developer - Ariyes Online</h4>
+              <h2 class="heading"><a href="http://airadventureflying.com/" target="_blank">Air Adventure Flying</a></h2>
+              <p><ul><li>Revamped the whole website look into a more modern look and feel</li>
+                <li>APPLICATION USED : CSS . JAVASCRIPT . WORDPRESS .  ELEMENTOR</li>
+              </ul>
+                </p>
+              <p><a href="http://airadventureflying.com/" target="_blank">View Project</a></p>
+            </div>
+          </div>
+
+          <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
+            <a href="https://motherinternational.poshub.my/" target="_blank" class="image order-2 d-flex justify-content-center align-items-center" style="background-image: url('images/ariyes-motherinter.png'); " data-scrollax=" properties: { translateY: '-30%'}">
+              <div class="icon d-flex text-center justify-content-center align-items-center">
+                <span class="icon-search"></span>
+              </div>
+            </a>
+            <div class="text order-1">
+              <h4 class="subheading">Web Developer - Ariyes Online</h4>
+              <h2 class="heading"><a href="https://motherinternational.poshub.my/" target="_blank">Mother International</a></h2>
+              <p><ul><li>Created the website from scratch</li>
+                <li>APPLICATION USED : CSS  . Odoo .  JAVASCRIPT  </li></ul>
+                </p>
+              <p><a href="https://motherinternational.poshub.my/" target="_blank">View Project</a></p>
+            </div>
+          </div>
+
+          <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
+            <a href="https://nipun.com.my/" target="_blank" class="image d-flex justify-content-center align-items-center" style="background-image: url('images/ariyes-nipun.png'); " data-scrollax=" properties: { translateY: '-30%'}">
+              <div class="icon d-flex text-center justify-content-center align-items-center">
+                <span class="icon-search"></span>
+              </div>
+            </a>
+            <div class="text">
+              <h4 class="subheading">Web Developer - Ariyes Online</h4>
+              <h2 class="heading"><a href="https://nipun.com.my/" target="_blank">Nipun Engineering</a></h2>
+              <p><ul><li>Made the website from scratch</li>
+                <li>APPLICATION USED : CSS  . Odoo .  JAVASCRIPT</li>
+              </ul>
+                </p>
+              <p><a href="https://nipun.com.my/" target="_blank">View Project</a></p>
+            </div>
+          </div>
+
+          <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
+            <a href="https://roveandpeak.com/" target="_blank" class="image order-2 d-flex justify-content-center align-items-center" style="background-image: url('images/ariyes-roveandpeak.png'); " data-scrollax=" properties: { translateY: '-30%'}">
+              <div class="icon d-flex text-center justify-content-center align-items-center">
+                <span class="icon-search"></span>
+              </div>
+            </a>
+            <div class="text order-1">
+              <h4 class="subheading">Web Developer - Ariyes Online</h4>
+              <h2 class="heading"><a href="https://roveandpeak.com/" target="_blank">Rove and Peak</a></h2>
+              <p><ul><li>Created the website from scratch</li>
+                <li>APPLICATION USED : CSS  . Odoo .  JAVASCRIPT </li></ul>
+                </p>
+              <p><a href="https://roveandpeak.com/" target="_blank">View Project</a></p>
+            </div>
+          </div>
+
         </div>
         </div>
       </section>
