--- a/portfolio.html
+++ b/portfolio.html
@@ -313,6 +313,24 @@
                 <p><a href="https://roveandpeak.com/" target="_blank">View Project</a></p>
               </div>
             </div>
+          
+            <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
+              <a href="https://bgiftnprint.com/" target="_blank" class="image d-flex justify-content-center align-items-center" style="background-image: url('images/Browngiftnprinting.png'); " data-scrollax=" properties: { translateY: '-30%'}">
+                <div class="icon d-flex text-center justify-content-center align-items-center">
+                  <span class="icon-search"></span>
+                </div>
+              </a>
+              <div class="text">
+                <h4 class="subheading">Freelancing Project</h4>
+                <h2 class="heading"><a href="https://bgiftnprint.com/" target="_blank">Brown Gift N Printing</a></h2>
+                <p><ul><li>Made the website from scratch</li>
+                  <li>APPLICATION USED : CSS  . Wordpress .  JAVASCRIPT . Elementor</li>
+                </ul>
+                  </p>
+                <p><a href="https://bgiftnprint.com/" target="_blank">View Project</a></p>
+              </div>
+            </div>
+
           </div>
         </div>
       </section>
