--- a/portfolio.html
+++ b/portfolio.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,700" rel="stylesheet">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/icon-pic-head.png">
 
     <link rel="stylesheet" href="css/open-iconic-bootstrap.min.css">
     <link rel="stylesheet" href="css/animate.css">
@@ -330,6 +331,73 @@
                 <p><a href="https://bgiftnprint.com/" target="_blank">View Project</a></p>
               </div>
             </div>
+
+            <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
+              <a href="https://talentadesignid.com/" target="_blank" class="image order-2 d-flex justify-content-center align-items-center" style="background-image: url('images/talentadesign-mockup.png'); " data-scrollax=" properties: { translateY: '-30%'}">
+                <div class="icon d-flex text-center justify-content-center align-items-center">
+                  <span class="icon-search"></span>
+                </div>
+              </a>
+              <div class="text order-1">
+                <h4 class="subheading">Freelancing Project</h4>
+                <h2 class="heading"><a href="https://talentadesignid.com/" target="_blank">Talenta Design</a></h2>
+                <p><ul><li>Created the website from scratch</li>
+                  <li>APPLICATION USED : Wordpress  . Css .  Elementor . Javascript </li></ul>
+                  </p>
+                <p><a href="https://talentadesignid.com/" target="_blank">View Project</a></p>
+              </div>
+            </div>
+  
+            <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
+              <a href="https://bgiftnprint.com/" target="_blank" class="image d-flex justify-content-center align-items-center" style="background-image: url('images/bgift-printmockup.png'); " data-scrollax=" properties: { translateY: '-30%'}">
+                <div class="icon d-flex text-center justify-content-center align-items-center">
+                  <span class="icon-search"></span>
+                </div>
+              </a>
+              <div class="text">
+                <h4 class="subheading">Freelancing Project</h4>
+                <h2 class="heading"><a href="https://bgiftnprint.com/" target="_blank">Brown Gift N Printing - New Face</a></h2>
+                <p><ul><li>Made the website from scratch</li>
+                  <li>APPLICATION USED : CSS  . Wordpress .  JAVASCRIPT . Elementor</li>
+                </ul>
+                  </p>
+                <p><a href="https://bgiftnprint.com/" target="_blank">View Project</a></p>
+              </div>
+            </div>
+  
+            <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
+              <a href="http://perkasaikon.com/" target="_blank" class="image order-2 d-flex justify-content-center align-items-center" style="background-image: url('images/Perkasaicon-mockup.png'); " data-scrollax=" properties: { translateY: '-30%'}">
+                <div class="icon d-flex text-center justify-content-center align-items-center">
+                  <span class="icon-search"></span>
+                </div>
+              </a>
+              <div class="text order-1">
+                <h4 class="subheading">Web Developer - Ariyes Online</h4>
+                <h2 class="heading"><a href="http://perkasaikon.com/" target="_blank">Perkasa Ikon</a></h2>
+                <p><ul><li>Created the website from scratch</li>
+                  <li>APPLICATION USED : Wordpress  . Css .  Elementor . Javascript </li></ul>
+                  </p>
+                <p><a href="http://perkasaikon.com/" target="_blank">View Project</a></p>
+              </div>
+            </div>
+  
+            <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
+              <a href="https://www.figma.com/design/LIHvGK1tqXkFgGCyqcH0Ak/Untitled?t=wEVv08V7mdZxLrF3-1" target="_blank" class="image d-flex justify-content-center align-items-center" style="background-image: url('images/Designlab-school task-uiux.png'); " data-scrollax=" properties: { translateY: '-30%'}">
+                <div class="icon d-flex text-center justify-content-center align-items-center">
+                  <span class="icon-search"></span>
+                </div>
+              </a>
+              <div class="text">
+                <h4 class="subheading">Design Lab UI UX Test</h4>
+                <h2 class="heading"><a href="https://www.figma.com/design/LIHvGK1tqXkFgGCyqcH0Ak/Untitled?t=wEVv08V7mdZxLrF3-1" target="_blank">Design Lab UI UX Test</a></h2>
+                <p><ul><li>Design Lab class task</li>
+                  <li>APPLICATION USED : Figma</li>
+                </ul>
+                  </p>
+                <p><a href="https://www.figma.com/design/LIHvGK1tqXkFgGCyqcH0Ak/Untitled?t=wEVv08V7mdZxLrF3-1" target="_blank">View Project</a></p>
+              </div>
+            </div>
+
 
           </div>
         </div>
