--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,700" rel="stylesheet">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/icon-pic-head.png">
 
     <link rel="stylesheet" href="css/open-iconic-bootstrap.min.css">
     <link rel="stylesheet" href="css/animate.css">
@@ -78,8 +79,8 @@
                 <div class="p-5">
                   <h2 class="mb-5">Hi! I'm Aqil Zikry</h2>
                   <p>I guess I do website and designs and stuff.. ^_^</p>
-                  <p><a href="PDFResume\Resume-MAqilZikryBMNizam.pdf" target="_blank">Checkout my resume</a></p>
-                  <p><a href="PDFResume\AqilTemplateExperiences.pdf" target="_blank">A Cooler View Of My Workstuffs!</a></p>
+                  <p><a href="PDFResume/Resume-Aqil.pdf" target="_blank">Checkout my resume</a></p>
+                  <p><a href="https://www.linkedin.com/in/aqil-zikry-0426412b1" target="_blank">Visit my linkedin!</a></p>
                   <ul class="ftco-footer-social list-unstyled mt-4">
                   </ul>
                   <h5>Contact me here!</h5>
@@ -105,16 +106,28 @@
 		          		</div>
 	          		</div>
           		</div>
+          			
 
           		<div class="exp mt-5 ftco-animate">
           			<h2 class="mb-4">Experience</h2>
-          			<div class="exp-wrap py-4">
+
+                <div class="exp-wrap py-4">
           				<div class="desc">
-	          				<h4>Junior Web Developer<span> - Zibeline International Publishing</span> </h4>
+	          				<h4>Web Developer<span> - Ariyes Online Sdn Bhd</span> </h4>
 	          				<p class="location">Cyberjaya - Selangor</p>
           				</div>
           				<div class="year">
-          					<p>2022- Present</p>
+          					<p>2024 - Present</p>
+          				</div>
+          			</div>
+
+          			<div class="exp-wrap py-4">
+          				<div class="desc">
+	          				<h4>Web Developer<span> - Zibeline International Publishing</span> </h4>
+	          				<p class="location">Cyberjaya - Selangor</p>
+          				</div>
+          				<div class="year">
+          					<p>2022 - 2024</p>
           				</div>
           			</div>
 
@@ -139,9 +152,9 @@
 								<div class="progress-wrap">
 									<h4>Photoshop</h4>
 									<div class="progress">
-									 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="75"
-									  	aria-valuemin="0" aria-valuemax="100" style="width:75%">
-									    <span>75%</span>
+									 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="80"
+									  	aria-valuemin="0" aria-valuemax="100" style="width:80%">
+									    <span>80%</span>
 									  	</div>
 									</div>
 								</div>
@@ -221,7 +234,7 @@
           <div class="row mb-5 justify-content-center">
             <div class="col-md-5 text-center">
               <div class="ftco-footer-widget">
-                <h2 class="mb-3">Contact Me</h2>
+                <h2 class="mb-3">Contact Us</h2>
                 <p class="h3 email"><a href="#">muhdaqilzikr@gmail.com</a></p>
               </div>
             </div>
